--- a/app/src/main/res/values/doh_resources.xml
+++ b/app/src/main/res/values/doh_resources.xml
@@ -9,6 +9,7 @@
         <item>OpenDNS</item>
         <item>Quad9</item>
         <item>CleanBrowsing (Family Filter)</item>
+        <item>AdGuard</item>
     </string-array>
 
     <string-array name="doh_provider_urls">
@@ -18,5 +19,6 @@
         <item>https://doh.opendns.com/dns-query</item>
         <item>https://dns.quad9.net/dns-query</item>
         <item>https://doh.cleanbrowsing.org/doh/family-filter/</item>
+        <item>https://dns.adguard-dns.com/dns-query</item>
     </string-array>
 </resources>
