--- a/app/src/main/res/xml/settings_tv.xml
+++ b/app/src/main/res/xml/settings_tv.xml
@@ -10,7 +10,6 @@
             android:title="@string/settings_category_streamingcommunity_domain"
             android:inputType="text"/>
 
-        <!-- La categoria Network Settings è ora annidata qui sotto -->
         <PreferenceCategory
             android:key="pc_network_settings"
             android:title="@string/settings_category_network_title">
@@ -25,7 +24,7 @@
         </PreferenceCategory>
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="Autoplay settings">
+    <PreferenceCategory android:title="Autoplay settings"> <!-- TODO: Estrarre in strings.xml -->
         <SwitchPreference
             android:key="AUTOPLAY"
             android:title="@string/settings_autoplay"
@@ -34,7 +33,24 @@
             android:summaryOff="@string/settings_autoplay_off" />
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="Miscellaneous">
+    <PreferenceCategory
+        android:title="Backup e Ripristino"> <!-- TODO: Estrarre in strings.xml -->
+
+        <Preference
+            android:key="key_backup_export_tv"
+            android:title="Esporta dati utente"
+            android:summary="Salva i tuoi dati (preferiti, cronologia visione) in un file."/>
+            <!-- TODO: Estrarre titolo e sommario in strings.xml -->
+
+        <Preference
+            android:key="key_backup_import_tv"
+            android:title="Importa dati utente"
+            android:summary="Ripristina i tuoi dati da un file di backup."/>
+            <!-- TODO: Estrarre titolo e sommario in strings.xml -->
+
+    </PreferenceCategory>
+
+    <PreferenceCategory android:title="Miscellaneous"> <!-- TODO: Estrarre in strings.xml -->
         <Preference
             android:icon="@drawable/ic_settings_about"
             android:key="p_settings_about"
