fixed favourite button for tv in movies and tvshows

--- a/app/src/main/res/layout/content_movie_tv.xml
+++ b/app/src/main/res/layout/content_movie_tv.xml
@@ -7,53 +7,72 @@
 
     <ImageView
         android:id="@+id/iv_movie_poster"
-        android:layout_width="250dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="100dp"
         android:adjustViewBounds="true"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription"
         tools:layout_constraintDimensionRatio="2:3"
-        tools:layout_height="0dp"
-        tools:visibility="visible" />
+        tools:layout_height="0dp" />
+
+    <ImageView
+        android:id="@+id/btn_movie_favorite"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="12dp"
+        android:padding="10dp"
+        android:src="@drawable/ic_favorite_disable"
+        android:tint="@drawable/color_button_text"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription,UseAppTint" />
 
     <TextView
         android:id="@+id/tv_movie_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="70dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginEnd="10dp"
+        android:gravity="center"
         android:textColor="#FFFFFF"
-        android:textSize="50sp"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/iv_movie_poster"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_goneMarginStart="70dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_movie_poster"
+        app:layout_goneMarginTop="64dp"
         tools:text="Title" />
 
     <ImageView
         android:id="@+id/iv_movie_rating_icon"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="10dp"
         android:src="@drawable/ic_star"
         android:tint="#C0C0C0"
         app:layout_constraintBottom_toBottomOf="@id/tv_movie_rating"
         app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintStart_toEndOf="@id/iv_movie_poster"
+        app:layout_constraintEnd_toStartOf="@id/tv_movie_rating"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/tv_movie_rating"
-        app:layout_goneMarginStart="70dp"
         tools:ignore="ContentDescription,UseAppTint" />
 
     <TextView
         android:id="@+id/tv_movie_rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toTopOf="@id/barrier1"
+        app:layout_constraintEnd_toStartOf="@id/tv_movie_quality"
         app:layout_constraintStart_toEndOf="@id/iv_movie_rating_icon"
         app:layout_constraintTop_toBottomOf="@id/tv_movie_title"
         tools:text="#.#" />
@@ -62,11 +81,13 @@
         android:id="@+id/tv_movie_quality"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="10dp"
         android:textAllCaps="true"
         android:textColor="#FFFFFF"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/barrier1"
+        app:layout_constraintEnd_toStartOf="@id/tv_movie_released"
         app:layout_constraintStart_toEndOf="@id/tv_movie_rating"
         app:layout_constraintTop_toBottomOf="@id/tv_movie_title"
         tools:text="HD"
@@ -76,9 +97,10 @@
         android:id="@+id/tv_movie_released"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toTopOf="@id/barrier1"
+        app:layout_constraintEnd_toStartOf="@id/tv_movie_runtime"
         app:layout_constraintStart_toEndOf="@id/tv_movie_quality"
         app:layout_constraintTop_toBottomOf="@id/tv_movie_title"
         tools:text="yyyy"
@@ -88,9 +110,10 @@
         android:id="@+id/tv_movie_runtime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toTopOf="@id/barrier1"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/tv_movie_released"
         app:layout_constraintTop_toBottomOf="@id/tv_movie_title"
         tools:text="# h # min"
@@ -107,52 +130,37 @@
         android:id="@+id/tv_movie_genres"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="70dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="10dp"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/iv_movie_poster"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/barrier1"
-        app:layout_goneMarginStart="70dp"
         tools:text="Genres" />
 
     <TextView
-        android:id="@+id/tv_movie_overview"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="70dp"
-        android:ellipsize="end"
-        android:maxLines="10"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/iv_movie_poster"
-        app:layout_constraintTop_toBottomOf="@id/tv_movie_genres"
-        app:layout_goneMarginStart="70dp"
-        tools:text="Overview" />
-
-    <TextView
         android:id="@+id/btn_movie_watch_now"
-        style="@style/AppTheme.Widget.Tv.Button"
+        style="@style/AppTheme.Widget.Mobile.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="30dp"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="26dp"
         android:text="@string/movie_watch_now"
-        app:layout_constraintStart_toEndOf="@id/iv_movie_poster"
-        app:layout_constraintTop_toBottomOf="@id/tv_movie_overview"
-        app:layout_goneMarginStart="70dp" />
+        app:layout_constraintEnd_toStartOf="@id/btn_movie_trailer"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_movie_genres"
+        app:layout_goneMarginEnd="10dp" />
 
     <ProgressBar
         android:id="@+id/pb_movie_progress"
         style="@android:style/Widget.ProgressBar.Horizontal"
         android:layout_width="0dp"
         android:layout_height="4dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="10dp"
         android:backgroundTint="#CC646464"
         android:progressTint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="@id/btn_movie_watch_now"
@@ -162,33 +170,34 @@
 
     <TextView
         android:id="@+id/btn_movie_trailer"
-        style="@style/AppTheme.Widget.Tv.Button"
+        style="@style/AppTheme.Widget.Mobile.Button.Secondary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="30dp"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginEnd="10dp"
         android:text="@string/movie_trailer"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/btn_movie_watch_now"
-        app:layout_constraintTop_toBottomOf="@id/tv_movie_overview" />
+        app:layout_constraintTop_toBottomOf="@id/tv_movie_genres" />
 
-    <ImageView
-        android:id="@+id/btn_movie_favorite"
-        style="@style/AppTheme.Widget.Tv.Button"
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier2"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginStart="20dp"
+        android:layout_height="wrap_content"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="btn_movie_watch_now,pb_movie_progress,btn_movie_trailer" />
+
+    <TextView
+        android:id="@+id/tv_movie_overview"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="30dp"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:src="@drawable/ic_favorite_disable"
-        android:tint="@drawable/color_button_text"
-        app:layout_constraintBottom_toBottomOf="@id/btn_movie_trailer"
-        app:layout_constraintStart_toEndOf="@id/btn_movie_trailer"
-        app:layout_constraintTop_toBottomOf="@id/tv_movie_overview"
-        tools:ignore="ContentDescription,UseAppTint" />
+        android:layout_marginEnd="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/barrier2"
+        tools:text="Overview" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
