--- a/app/src/main/res/xml/settings_mobile.xml
+++ b/app/src/main/res/xml/settings_mobile.xml
@@ -33,19 +33,17 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:title="Backup e Ripristino"> <!-- TODO: Estrarre in strings.xml -->
+        android:title="@string/backup_category_title">
 
         <Preference
             android:key="key_backup_export_mobile"
-            android:title="Esporta dati utente"
-            android:summary="Salva i tuoi dati (preferiti, cronologia visione) in un file."/>
-            <!-- TODO: Estrarre titolo e sommario in strings.xml -->
+            android:title="@string/backup_export_title"
+            android:summary="@string/backup_export_summary"/>
 
         <Preference
             android:key="key_backup_import_mobile"
-            android:title="Importa dati utente"
-            android:summary="Ripristina i tuoi dati da un file di backup."/>
-            <!-- TODO: Estrarre titolo e sommario in strings.xml -->
+            android:title="@string/backup_import_title"
+            android:summary="@string/backup_import_summary"/>
 
     </PreferenceCategory>
 
