--- a/app/src/main/res/xml/settings_tv.xml
+++ b/app/src/main/res/xml/settings_tv.xml
@@ -24,7 +24,7 @@
         </PreferenceCategory>
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="Autoplay settings"> <!-- TODO: Estrarre in strings.xml -->
+    <PreferenceCategory android:title="@string/autoplay_settings">
         <SwitchPreference
             android:key="AUTOPLAY"
             android:title="@string/settings_autoplay"
@@ -34,23 +34,21 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:title="Backup e Ripristino"> <!-- TODO: Estrarre in strings.xml -->
+        android:title="@string/backup_category_title">
 
         <Preference
             android:key="key_backup_export_tv"
-            android:title="Esporta dati utente"
-            android:summary="Salva i tuoi dati (preferiti, cronologia visione) in un file."/>
-            <!-- TODO: Estrarre titolo e sommario in strings.xml -->
+            android:title="@string/backup_export_title"
+            android:summary="@string/backup_export_summary"/>
 
         <Preference
             android:key="key_backup_import_tv"
-            android:title="Importa dati utente"
-            android:summary="Ripristina i tuoi dati da un file di backup."/>
-            <!-- TODO: Estrarre titolo e sommario in strings.xml -->
+            android:title="@string/backup_import_title"
+            android:summary="@string/backup_import_summary"/>
 
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="Miscellaneous"> <!-- TODO: Estrarre in strings.xml -->
+    <PreferenceCategory android:title="@string/miscelaneous_title">
         <Preference
             android:icon="@drawable/ic_settings_about"
             android:key="p_settings_about"
