--- a/app/src/main/res/layout/fragment_search_mobile.xml
+++ b/app/src/main/res/layout/fragment_search_mobile.xml
@@ -83,7 +83,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Búsqueda Global"
+        android:text="@string/global_search"
         app:layout_constraintEnd_toEndOf="@id/cl_search"
         app:layout_constraintStart_toStartOf="@id/cl_search"
         app:layout_constraintTop_toBottomOf="@id/cl_search" />
